# pinball-dmd-game-console

./: .gitignore  CMakeLists.txt  nes_input.c  nes_input.h  params.h  screen.c  screen.h  stern-dmd-driver.c  util.c  util.h
channels/: conway.c  conway.h  game_example.c  game_example.h  screensaver.c  screensaver.h
graphics/: dmd_palette.aseprite
hardware/: stern_dmd_driver.kicad_pcb  stern_dmd_driver.kicad_prl  stern_dmd_driver.kicad_pro  stern_dmd_driver.kicad_sch
